test/corpus/advanced_features.txt
==================
Attachment headers
==================
From: sender@example.com
To: recipient@example.com
Subject: Files attached
Attach: /home/user/document.pdf
Attach: /home/user/photo.jpg

Please find the attached files.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (attach_header
    key: (header_key)
    value: (header_value))
  (attach_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Multiple recipients
==================
From: sender@example.com
To: user1@example.com, user2@example.com, user3@example.com
Cc: team@example.com
Bcc: hidden@example.com, another@example.com
Subject: Team update

Hello everyone!

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (cc_header
    key: (header_key)
    value: (header_value))
  (bcc_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (body))

==================
MIME headers
==================
From: sender@example.com
To: recipient@example.com
Subject: Test
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: 8bit
MIME-Version: 1.0

Message with MIME headers.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (content_type_header
    key: (header_key)
    value: (header_value))
  (content_transfer_encoding_header
    key: (header_key)
    value: (header_value))
  (mime_version_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Threading headers
==================
From: sender@example.com
To: recipient@example.com
Subject: Re: Previous topic
In-Reply-To: <20240101120000.GA12345@example.com>
References: <20240101100000.GA11111@example.com> <20240101120000.GA12345@example.com>
Message-ID: <20240102090000.GA22222@example.com>

Continuing the thread...

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (in_reply_to_header
    key: (header_key)
    value: (header_value))
  (references_header
    key: (header_key)
    value: (header_value))
  (message_id_header
    key: (header_key)
    value: (header_value))
  (body))

==================
PGP signed message
==================
From: sender@example.com
To: recipient@example.com
Subject: Signed message

-----BEGIN PGP SIGNED MESSAGE-----
Hash: SHA256

This is a signed message.

It has multiple paragraphs.

-----BEGIN PGP SIGNATURE-----

iQEzBAEBCAAdFiEE1234567890ABCDEFexampleFAkeKeyIDACQQLmay4ACgkQ
exampleSignatureDataHere1234567890abcdefghijklmnopqrstuvwxyz
MoreSignatureData==
=AbCd
-----END PGP SIGNATURE-----

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (body))

==================
PGP encrypted message
==================
From: sender@example.com
To: recipient@example.com
Subject: Encrypted message

-----BEGIN PGP MESSAGE-----

hQEMA1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrs
tuvwxyz0123456789+/=EncryptedContentHereWithBase64Encoding==
MoreEncryptedData1234567890abcdefghijklmnopqrstuvwxyz
=aBcD
-----END PGP MESSAGE-----

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Mixed PGP and regular content
==================
From: sender@example.com
To: recipient@example.com
Subject: Encrypted content below

Please decrypt the following:

-----BEGIN PGP MESSAGE-----

hQEMA1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrs
=aBcD
-----END PGP MESSAGE-----

Thanks!

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Custom X-headers
==================
From: sender@example.com
To: recipient@example.com
Subject: Test
X-Mailer: Mutt/2.2.12
X-Priority: High
X-Custom-Field: custom-value

Body text.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (custom_header
    key: (header_key)
    value: (header_value))
  (custom_header
    key: (header_key)
    value: (header_value))
  (custom_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Draft headers
==================
From: sender@example.com
To:
Subject: [DRAFT] Unfinished email
Date:
Reply-To:

TODO: Finish this email later.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (date_header
    key: (header_key)
    value: (header_value))
  (reply_to_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Complete email with date header
==================
From: sender@example.com
To: recipient@example.com
Subject: Meeting tomorrow
Date: Tue, 3 Sep 2024 10:00:00 +1000

Let's meet at 2pm.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (date_header
    key: (header_key)
    value: (header_value))
  (body))

==================
Email with various date formats
==================
From: sender@example.com
To: recipient@example.com
Subject: Date format test
Date: Mon, 02 Sep 2024 15:45:30 -0500
Message-ID: <20240902154530.ABC123@example.com>
Reply-To: sender@example.org

Testing different date formats and timezones.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (date_header
    key: (header_key)
    value: (header_value))
  (message_id_header
    key: (header_key)
    value: (header_value))
  (reply_to_header
    key: (header_key)
    value: (header_value))
  (body))
