test/corpus/complete.txt
==================
Simple complete message
==================
From: sender@example.com

This is the body text.

---

(source_file
  (from_header
    value: (header_value))
  (body))

==================
Multiple headers with body
==================
From: sender@example.com
To: recipient@example.com
Subject: Test message

This is the first paragraph.

This is the second paragraph
with multiple lines.

Final paragraph.

---

(source_file
  (from_header
    value: (header_value))
  (to_header
    value: (header_value))
  (subject_header
    value: (header_value))
  (body))

==================
Body with special characters
==================
Subject: Special chars test

Body with special chars: !@#$%^&*()
Unicode: ™ © ® → ← ↑ ↓

---

(source_file
  (subject_header
    value: (header_value))
  (body))
