test/corpus/empty_headers.txt
==================
Empty header values
==================
From: Me <me@example.com>
To: Oldmate <oldmate@example.com>
Cc:
Bcc:
Subject: Re: Setup today
Reply-To:

Message body goes here.

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (cc_header
    key: (header_key)
    value: (header_value))
  (bcc_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (reply_to_header
    key: (header_key)
    value: (header_value))
  (body))
