test/corpus/markdown_bodies.txt
==================
Body with markdown headers
==================
Subject: Test with markdown headers

# Main heading

## Subheading

Some paragraph text.

---

(source_file
  (subject_header
    value: (header_value))
  (body))

==================
Body with markdown lists
==================
Subject: Test with markdown lists

- First item
- Second item
  - Nested item
  - Another nested item
- Third item

1. Numbered item
2. Another numbered item

---

(source_file
  (subject_header
    value: (header_value))
  (body))

==================
Body with markdown code blocks
==================
Subject: Test with code blocks

Here's some code:

```python
def hello():
    print("world")
```

And inline `code` too.

---

(source_file
  (subject_header
    value: (header_value))
  (body))

==================
Body with markdown formatting
==================
Subject: Test with markdown formatting

This is **bold** and this is *italic*.

This is ***bold and italic***.

> This is a blockquote
> spanning multiple lines

---

(source_file
  (subject_header
    value: (header_value))
  (body))

==================
Body with markdown links and images
==================
Subject: Test with links and images

Check out [this link](https://example.com).

![Alt text](image.png)

[Reference link][1]

[1]: https://example.com "Title"

---

(source_file
  (subject_header
    value: (header_value))
  (body))

==================
Headers with markdown body
==================
From: sender@example.com
To: recipient@example.com
Subject: Markdown formatted email

# Welcome

This email contains **markdown** formatting:

- Lists
- Code blocks
- Links

```bash
echo "Hello, World!"
```

---

(source_file
  (from_header
    value: (header_value))
  (to_header
    value: (header_value))
  (subject_header
    value: (header_value))
  (body))
