test/corpus/task_examples.txt
==================
Reply email with empty headers and quoted text
==================
From: Me <me@example.com>
To: Oldmate <oldmate@example.com>
Cc:
Bcc:
Subject: Re: Setup today
Message-ID: <v5jmfosr43s6owoqzmuxnw2pzslmrv6cbrwhfefebjnaxydhem@ttdx7xnfxx44>
Reply-To:
In-Reply-To: <SY4P282MB3648E46BCD529685E910FC92A100A@SY4P282MB3648.AUSP282.PROD.OUTLOOK.COM>

On Fri, 05 Sep 2025 at 08:10 AM +1000, Oldmate wrote:
>Yeah sorry, forgot to confirm with the previous email. I'll be aiming to
>be in at around 11.
>
>Cheers

---

(source_file
  (from_header
    key: (header_key)
    value: (header_value))
  (to_header
    key: (header_key)
    value: (header_value))
  (cc_header
    key: (header_key)
    value: (header_value))
  (bcc_header
    key: (header_key)
    value: (header_value))
  (subject_header
    key: (header_key)
    value: (header_value))
  (message_id_header
    key: (header_key)
    value: (header_value))
  (reply_to_header
    key: (header_key)
    value: (header_value))
  (in_reply_to_header
    key: (header_key)
    value: (header_value))
  (body))
